--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                         <li>
                             <a href="sub_01.html" class="gnb_title">Menu</a>
                             <ul class="dropdown-nav">
-                                <li><a href="sub_01.html">온라인스토어</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">컵 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">바 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">샌드&콘 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">아이스크림 케이크</a></li>
+                                <li><a href="sub_01.html#online">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">아이스크림 케이크</a></li>
                                 <li><a href="sub_01.html#offline">오프라인 스토어</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#offline">크리에이션 메뉴</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#offline">아이스크림 드링크</a></li>
