--- a/sub_02.html
+++ b/sub_02.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="image/thumbnail.png" width="800" height="600">
+    <meta property="og:title" content="송혜린_하겐다즈_메뉴">
+    <meta property="og:description" content="uiux_10/13_하겐다즈_메뉴">
+    <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/sub_02.html">
     <link rel="stylesheet" href="css/sub_02.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Haagen-Dazs Menu</title>
@@ -33,11 +37,11 @@
                         <li>
                             <a href="sub_01.html#online" class="gnb_title">Menu</a>
                             <ul class="dropdown-nav">
-                                <li><a href="sub_01.html">온라인스토어</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">컵 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">바 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">샌드&콘 아이스크림</a></li>
-                                <li class="dropdown-sub"><a href="sub_01.html">아이스크림 케이크</a></li>
+                                <li><a href="sub_01.html#online">온라인스토어</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">컵 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">바 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">샌드&콘 아이스크림</a></li>
+                                <li class="dropdown-sub"><a href="sub_01.html#online">아이스크림 케이크</a></li>
                                 <li><a href="sub_01.html#offline">오프라인 스토어</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#offline">크리에이션 메뉴</a></li>
                                 <li class="dropdown-sub"><a href="sub_01.html#offline">아이스크림 드링크</a></li>
