--- a/sub_02.html
+++ b/sub_02.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="image/thumbnail.png" width="800" height="600">
-    <meta property="og:title" content="송혜린_하겐다즈_메뉴">
-    <meta property="og:description" content="uiux_10/13_하겐다즈_메뉴">
+    <meta property="og:title" content="송혜린_하겐다즈_소개">
+    <meta property="og:description" content="uiux_10/13_하겐다즈_소개">
     <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/sub_02.html">
     <link rel="stylesheet" href="css/sub_02.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
@@ -170,8 +170,6 @@
             <p>Top</p>
         </a>
     </footer>
-
-    <!-- ✅ 하나의 순수 JS 스크립트로 통합 -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // 1) 네비 스크롤 축소
