--- a/sub_02.html
+++ b/sub_02.html
@@ -3,11 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="image/thumbnail.png" width="800" height="600">
-    <meta property="og:title" content="송혜린_하겐다즈_소개">
-    <meta property="og:description" content="uiux_10/13_하겐다즈_소개">
-    <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/sub_02.html">
     <link rel="stylesheet" href="css/sub_02.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Haagen-Dazs Menu</title>
@@ -19,10 +14,8 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="index.html"><img src="image/logo_02_ft.png" class="logo-default"
-                                alt="logo default" /></a>
-                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"
-                                alt="logo scrolled" /></a>
+                        <a href="index.html"><img src="image/logo_02_ft.png" class="logo-default" alt=""></a>
+                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled" alt=""></a>
                     </h1>
                     <ul class="gnb">
                         <li>
@@ -108,12 +101,12 @@
                         초콜릿, 카라멜, 딸기, 바닐라 같은 대표적인 맛도 인공 향료나 색소 없이, 단순하지만 깊은 맛을 전합니다. <br>
                         단순한 재료로도 마법 같은 순간이 펼쳐질 수 있다는 걸 보여주는 브랜드, 그게 바로 하겐다즈입니다. </p>
                 </div>
-                <img src="image/about_04.png">
+                <img src="image/about_04.png" alt="">
             </div>
         </div>
         <div class="about_middle_warp">
             <div class="about_middle">
-                <img src="image/about_02.png">
+                <img src="image/about_02.png" alt="">
                 <div class="about_middle_text">
                     <h4>한 입의 사치, 그 이상의 경험</h4>
                     <p>
@@ -138,15 +131,15 @@
                         또한 하겐다즈 아이스크림 케이크는 소중한 날을 더욱 특별하게 만들어줍니다.
                     </p>
                 </div>
-                <img src="image/about_03.png">
+                <img src="image/about_03.png" alt="">
             </div>
         </div>
     </main>
 
     <footer>
         <div class="footer">
-            <h1><a href="index.html"><img src="image/logo_01.png" alt="logo" /></a></h1>
-            <h1><a href="index.html"><img src="image/logo_02_ft.png" alt="logo alt" /></a></h1>
+            <h1><a href="index.html"><img src="image/logo_01.png" alt="logo"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_02_ft.png" alt="logo alt"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
@@ -166,7 +159,7 @@
                 <p>© 2025 General Mills. All Rights Reserved.</p>
             </div>
         </div>
-        <a id="topBtn" href="#" aria-label="상단으로"><img src="image/arrow_top.png" alt="top" />
+        <a id="topBtn" href="#" aria-label="상단으로"><img src="image/arrow_top.png" alt="top">
             <p>Top</p>
         </a>
     </footer>
