--- a/sub_01.html
+++ b/sub_01.html
@@ -3,11 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="image/thumbnail.png" width="800" height="600">
-    <meta property="og:title" content="송혜린_하겐다즈_메뉴">
-    <meta property="og:description" content="uiux_10/13_하겐다즈_메뉴">
-    <meta property="og:url" content="https://sonn08120-png.github.io/haagendazs/sub_01.html">
     <link rel="stylesheet" href="css/sub_01.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Haagen-Dazs Menu</title>
@@ -19,10 +14,8 @@
             <div class="nav_back">
                 <div class="nav">
                     <h1>
-                        <a href="index.html"><img src="image/logo_02_ft.png" class="logo-default"
-                                alt="logo default" /></a>
-                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"
-                                alt="logo scrolled" /></a>
+                        <a href="index.html"><img src="image/logo_02_ft.png" class="logo-default"alt="logo default"></a>
+                        <a href="index.html"><img src="image/logo_02.png" class="logo-scrolled"alt="logo scrolled"></a>
                     </h1>
                     <ul class="gnb">
                         <li>
@@ -73,8 +66,7 @@
                     </ul>
                     <p>
                         <a href="" class="login">login</a>
-                        <a href="#" class="hamburger" aria-label="메뉴 열기" aria-expanded="false"><img
-                                src="image/hamburger.png" alt="menu" /></a>
+                        <a href="#" class="hamburger" aria-label="메뉴 열기" aria-expanded="false"><img src="image/hamburger.png" alt="menu"></a>
                     </p>
                     <div class="mobile-menu" aria-hidden="true">
                         <ul class="gnb-mobile"></ul>
@@ -85,7 +77,7 @@
         </div>
         <div class="visual">
             <h2>Menu</h2>
-            <img src="image/visual_01.png" alt="visual" />
+            <img src="image/visual_01.png" alt="visual">
         </div>
     </header>
 
@@ -118,39 +110,39 @@
         <div class="Menu_list online_menu">
             <div class="menu_list_warp">
                 <ul class="cup_Icecream_menu" id="cup">
-                    <li><a href="#"><img src="image/cup_04.png" alt="쿠키 앤 초콜릿 파인트" />
+                    <li><a href="#"><img src="image/cup_04.png" alt="쿠키 앤 초콜릿 파인트">
                             <p>쿠키 앤 초콜릿 [파인트]</p>
                         </a></li>
-                    <li><a href="#"><img src="image/cup_05.png" alt="쿠키 앤 그린티 파인트" />
+                    <li><a href="#"><img src="image/cup_05.png" alt="쿠키 앤 그린티 파인트">
                             <p>쿠키 앤 그린티 [파인트]</p>
                         </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_01.png" alt="쿠키 앤 그린티 미니컵" />
+                    <li class="cup_small"><a href="#"><img src="image/cup_01.png" alt="쿠키 앤 그린티 미니컵">
                             <p>쿠키 앤 그린티 [미니컵]</p>
                         </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_02.png" alt="마드리드 츄로스 미니컵" />
+                    <li class="cup_small"><a href="#"><img src="image/cup_02.png" alt="마드리드 츄로스 미니컵">
                             <p>마드리드 츄로스 [미니컵]</p>
                         </a></li>
-                    <li class="cup_small"><a href="#"><img src="image/cup_03.png" alt="로마 티라미수 미니컵" />
+                    <li class="cup_small"><a href="#"><img src="image/cup_03.png" alt="로마 티라미수 미니컵">
                             <p>로마 티라미수 [미니컵]</p>
                         </a></li>
-                    <li><a href="#"><img src="image/cup_08.png" alt="마드리드 츄로스 파인트" />
+                    <li><a href="#"><img src="image/cup_08.png" alt="마드리드 츄로스 파인트">
                             <p>마드리드 츄로스 [파인트]</p>
                         </a></li>
-                    <li><a href="#"><img src="image/cup_07.png" alt="로마 티라미수 파인트" />
+                    <li><a href="#"><img src="image/cup_07.png" alt="로마 티라미수 파인트">
                             <p>로마 티라미수 [파인트]</p>
                         </a></li>
-                    <li><a href="#"><img src="image/cup_06.png" alt="블루베리 앤 크림 파인트" />
+                    <li><a href="#"><img src="image/cup_06.png" alt="블루베리 앤 크림 파인트">
                             <p>블루베리 앤 크림 [파인트]</p>
                         </a></li>
                 </ul>
             </div>
             <div class="number">
                 <ul>
-                    <li><a href="#"><img src="image/arrow_left_small.png"></a></li>
+                    <li><a href="#"><img src="image/arrow_left_small.png" alt=""></a></li>
                     <li><a href="#"><b>1</b></a></li>
                     <li class="small_number"><a href="#">2</a></li>
                     <li class="small_number"><a href="#">3</a></li>
-                    <li><a href="#"><img src="image/arrow_right_small.png"></a></li>
+                    <li><a href="#"><img src="image/arrow_right_small.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -158,25 +150,25 @@
         <div class="Menu_list offline_menu" style="display:none;">
             <div class="menu_list_warp">
                 <ul class="creation_menu_list" id="creation">
-                    <li class="img_small"><a href="#"><img src="image/dessert_01.png" alt="쿠키&크림 파르페 크런치" />
+                    <li class="img_small"><a href="#"><img src="image/dessert_01.png" alt="쿠키&크림 파르페 크런치">
                             <p>쿠키&크림 파르페 크런치</p>
                         </a></li>
-                    <li class="img_small"><a href="#"><img src="image/dessert_02.png" alt="요거트 파르페 크런치" />
+                    <li class="img_small"><a href="#"><img src="image/dessert_02.png" alt="요거트 파르페 크런치">
                             <p>요거트 파르페 크런치</p>
                         </a></li>
-                    <li class="img_small"><a href="#"><img src="image/dessert_04.png" alt="소이 빈 파르페 크런치" />
+                    <li class="img_small"><a href="#"><img src="image/dessert_04.png" alt="소이 빈 파르페 크런치">
                             <p>소이 빈 파르페 크런치</p>
                         </a></li>
-                    <li><a href="#"><img src="image/dessert_03.png" alt="와플 드림" />
+                    <li><a href="#"><img src="image/dessert_03.png" alt="와플 드림">
                             <p>와플 드림</p>
                         </a></li>
                 </ul>
             </div>
             <div class="number">
                 <ul>
-                    <li><a href=""><img src="image/arrow_left_small.png"></a></li>
+                    <li><a href=""><img src="image/arrow_left_small.png" alt=""></a></li>
                     <li><b>1</b></li>
-                    <li><img src="image/arrow_right_small.png"></li>
+                    <li><img src="image/arrow_right_small.png" alt=""></li>
                 </ul>
             </div>
         </div>
@@ -184,8 +176,8 @@
 
     <footer>
         <div class="footer">
-            <h1><a href="index.html"><img src="image/logo_01.png" alt="logo" /></a></h1>
-            <h1><a href="index.html"><img src="image/logo_02_ft.png" alt="logo alt" /></a></h1>
+            <h1><a href="index.html"><img src="image/logo_01.png" alt="logo"></a></h1>
+            <h1><a href="index.html"><img src="image/logo_02_ft.png" alt="logo alt"></a></h1>
             <div class="footer_warp">
                 <ul class="footer_list_01">
                     <li>개인정보처리방침</li>
@@ -205,7 +197,7 @@
                 <p>© 2025 General Mills. All Rights Reserved.</p>
             </div>
         </div>
-        <a id="topBtn" href="#" aria-label="상단으로"><img src="image/arrow_top.png" alt="top" />
+        <a id="topBtn" href="#" aria-label="상단으로"><img src="image/arrow_top.png" alt="top">
             <p>Top</p>
         </a>
     </footer>
