--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="slider_controls">
                     <button id="prev"><img src="image/arrow_left.png" width="42" height="42" alt="prev"></button>
                     <h2>HaagenDazs News</h2>
-                    <button href="" id="next"><img src="image/arrow_right.png" width="42" height="42" alt="next"></button>
+                    <button id="next"><img src="image/arrow_right.png" width="42" height="42" alt="next"></button>
                 </div>
 
                 <div class="slider4">
